# TestWorld

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CameraPlugin.cc  CameraPlugin.cc~  CameraPlugin.hh  CameraPlugin.hh~  CarPlugin.cc  CarPlugin.cc~  CarPlugin.hh  CarPlugin.hh~  LidarInfo.hh~  LidarPlugin.cc  LidarPlugin.cc~  LidarPlugin.hh  LidarPlugin.hh~  big_closed_course.world  closed_course.world  closed_course.world~  compile  dataProcessing.cc  dataProcessing.cc~  dataProcessing.hh  dataProcessing.hh~  longcurve.world  test.world  test.world~
NEW CODE/: CameraSensor1.cc  CameraSensor1.hh
model/curved_road/: model.sdf~
model/curved_road/materials/scripts/: comps_road.material
model/curved_road_2/: model.config  model.sdf~
model/curved_road_2/materials/scripts/: curved_road.material~  curved_road_2.material~
model/curved_road_4/: model.config~
model/sdcCar/: sdcCar.sdf  sdcCar.sdf~
model/test_model/: model.config  model.sdf  model.sdf~
